--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-Django==5.2.6
-psycopg2-binary==2.9.9
+Django==4.2.11
 gunicorn==21.2.0
 whitenoise==6.6.0
-Pillow==10.1.0
-reportlab==4.0.7
-qrcode==7.4.2
+psycopg2-binary==2.9.10
+dj-database-url==2.1.0
+Pillow==10.2.0
+reportlab==4.1.0
+qrcode[pil]==7.4.2
 PyYAML==6.0.1
 python-decouple==3.8
 pyotp==2.9.0
+django-extensions==3.2.3
+django-grappelli==3.0.8
+django-jazzmin==2.6.0
